@@ -1,6 +1,8 @@
 package ru.pfr.overpayments.controller.overpayment.referenceBook;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -8,8 +10,6 @@ import org.springframework.web.bind.annotation.*;
 import ru.pfr.overpayments.model.overpayment.dto.referenceBook.ReasonsForOverpaymentsDto;
 import ru.pfr.overpayments.model.overpayment.mapper.referenceBook.ReasonsForOverpaymentsMapper;
 import ru.pfr.overpayments.service.overpayment.referenceBook.ReasonsForOverpaymentsService;
-
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -97,12 +97,16 @@ public class ReferenceBookControllerRest {
     ) {
         try {
             return new ResponseEntity<>(
-                    reasonsForOverpaymentsService.findAll()
+                    reasonsForOverpaymentsService.findAll(
+                                    PageRequest.of(
+                                            pagination,
+                                            col,
+                                            Sort.by("id").descending()
+                                    )
+                            )
                             .stream()
                             .map(reasonsForOverpaymentsMapper::toDto)
-                            .skip((long) col * (pagination - 1))
-                            .limit(col)
-                            .collect(Collectors.toList()),
+                            .toList(),
                     HttpStatus.OK);
         } catch (Exception e) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
